--- a/name_test.html
+++ b/name_test.html
@@ -1,5 +1,12 @@
 <html><HEAD><TITLE></TITLE>
-<META NAME='TITLE' CONTENT='Valqimir'>
+<title>Valqimir</title>
+  </script>
+
+  <link rel="icon" href="https://valqimir.com/gallery/logo%20without%20text-ts1609880449.png" type="image/png">
+	<script type="text/javascript">
+	window.useTrailingSlashes = true;
+	window.disableRightClick = true;
+</script>
 <META NAME='AUTHOR' CONTENT='Valqimir'>
 <META NAME='SUBJECT' CONTENT='Valqimir'>
 <META NAME='DESCRIPTION' CONTENT='Valqimir'>
