--- a/name_test.html
+++ b/name_test.html
@@ -1,11 +1,14 @@
-<html><HEAD><TITLE></TITLE>
-<title>Valqimir</title>
-  </script>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>HTML Elements Reference</title>
+</head>
+<body>
 
-  <link rel="icon" href="https://valqimir.com/gallery/logo%20without%20text-ts1609880449.png" type="image/png">
-	<script type="text/javascript">
-	window.useTrailingSlashes = true;
-	window.disableRightClick = true;
-</script>
+<h1>This is a heading</h1>
+<p>This is a paragraph.</p>
+
+</body>
 
 <meta name="viewport" content="width=device-width"><frameset rows="*,0" border="0" frameborder="0"><frame name="mainFrame" src="https://www.valqimir.com/"><frame name="RedirFrame" marginwidth="0" marginheight="0" scrolling="NO" noresize src="blank.html"><NOFRAMES><body><a href="https://www.valqimir.com/">Redirection: https://www.valqimir.com/</a></body></NOFRAMES></frameset></html>
+</html>
