--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<html><HEAD><TITLE></TITLE>
+<!DOCTYPE html>
+<html>
+<title>vlad's party</title>
+<link rel="shortcut icon" type="image/png" href="siteicon.png"
 <META NAME='TITLE' CONTENT=''>
 <META NAME='AUTHOR' CONTENT=''>
 <META NAME='SUBJECT' CONTENT=''>
@@ -16,3 +19,5 @@
 </HEAD>
 
 <meta name="viewport" content="width=device-width"><frameset rows="*,0" border="0" frameborder="0"><frame name="mainFrame" src="https://www.valqimir.com/"><frame name="RedirFrame" marginwidth="0" marginheight="0" scrolling="NO" noresize src="blank.html"><NOFRAMES><body><a href="https://www.valqimir.com/">Redirection: https://www.valqimir.com/</a></body></NOFRAMES></frameset></html>
+
+</html>
