--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>vlad's party</title>
+<title>valqimir</title>
 <link rel="shortcut icon" type="image/png" href="siteicon.png"
 <META NAME='TITLE' CONTENT=''>
 <META NAME='AUTHOR' CONTENT=''>
