--- a/index.html
+++ b/index.html
@@ -2,21 +2,7 @@
 <html>
 <title>valqimir</title>
 <link rel="shortcut icon" type="image/png" href="siteicon.png"
-<META NAME='TITLE' CONTENT=''>
-<META NAME='AUTHOR' CONTENT=''>
-<META NAME='SUBJECT' CONTENT=''>
-<META NAME='DESCRIPTION' CONTENT=''>
-<META NAME='KEYWORDS' CONTENT=''>
-<META NAME='REVISIT-AFTER' CONTENT=''>
-<META NAME='Content-Language' CONTENT=''>
-<META NAME='COPYRIGHT' CONTENT=''>
-<META NAME='OWNER' CONTENT=''>
-<META NAME='ROBOTS' CONTENT=''>
-<META NAME='RATING' CONTENT=''>
-<META HTTP-EQUIV='PRAGMA' CONTENT='NO-CACHE'>
-<META HTTP-EQUIV='REFRESH' CONTENT=''>
-<META NAME='reply-to' CONTENT=''>
-</HEAD>
+</head>
 
 <meta name="viewport" content="width=device-width"><frameset rows="*,0" border="0" frameborder="0"><frame name="mainFrame" src="https://www.valqimir.com/"><frame name="RedirFrame" marginwidth="0" marginheight="0" scrolling="NO" noresize src="blank.html"><NOFRAMES><body><a href="https://www.valqimir.com/">Redirection: https://www.valqimir.com/</a></body></NOFRAMES></frameset></html>
 
